# own-your-data

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  Makefile  README.md  app.html  hooks.py  index.html  mkdocs.yml  package-lock.json  package.json  playground.html  pyproject.toml
.github/workflows/: bump_version.yml  deploy_pages.yml  tests.yml
.streamlit/: config.toml
docs/: getting-started.md  index.md
docs/about/: duckdb.md  local_run.md  own_your_data.md  ownyourdata.md  plotly.md  pyodide.md  python.md  streamlit.md
own_your_data/: app.html  app.py  charts.py  constants.py  home.py  utils.py
own_your_data/charts/: charts.py  constants.py  definition.py  helpers.py  import_file.py
own_your_data/components/: about.py  chart_configuration.py  charts.py  data_analysis.py  generate_charts.py  helpers.py  import_file.py  python_editor.py  sidebar.py  sql_editor.py  system_info.py  track_your_data.py
own_your_data/database/: helpers.py  models.py  utils.py
own_your_data/demo/: demo_file.txt  generate_csv.py
own_your_data/pages/: 1_home.py  2_generate_charts.py  generate_charts.py
own_your_data/tests/: conftest.py  generate_csv.py  test_charts.py  test_csv.csv  test_file_import.py  test_import_file.py  test_index.py
