[tool.poetry]
name = "own-your-data"
version = "0.1.0"
description = "Application to track and trace any data you want, on your local machine, through the web browser"
authors = ["acirtep <acirtep>"]
readme = "README.md"
packages = [{include = "own_your_data"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
duckdb = "^1.1.1"
plotly = "^5.24.1"
fsspec = "^2024.9.0"
sqlalchemy = "^2.0.35"
duckdb-engine = "^0.13.2"
streamlit-code-editor = "^0.1.21"
sqlparse = "^0.5.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"
mkdocs-material = "^9.5.44"
commitizen = "^4.0.0"



[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_single_line = "true"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version"
]